kantin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kantin-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /[cite: 10]
spec:
  ingressClassName: nginx[cite: 2]
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5000[cite: 10]
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80[cite: 10]
